# homebase

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
homebase/: __init__.py  __main__.py  app.py  cache.py  clock.py  config.py  fetcher.py  model.py  paths.py  refresher.py  rss.py  server.py  ssrf.py
homebase/markets/: marketstate.py  nyse_holidays.json  symbol_map.json  symbols.py
homebase/sources/: __init__.py  base.py  headlines.py  mlb.py  news.py  nhl.py  stooq.py  yahoo.py
homebase/static/: app.js  index.html  style.css
packaging/: BUILD.md  entry.py  homebase.spec  install-windows.ps1  uninstall-windows.ps1
tests/: conftest.py  fixtures.py  test_ac_cache.py  test_ac_config.py  test_ac_corr.py  test_ac_fresh.py  test_ac_mkt.py  test_ac_news.py  test_ac_ops.py  test_ac_priv.py  test_coverage_matrix.py  test_t3_bypass.py
