[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "homebase"
version = "1.0.0"
description = "A private, self-hosted browser start page that aggregates what you follow."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tzdata>=2024.1 ; platform_system == 'Windows'",
]

[project.scripts]
homebase = "homebase.__main__:main"

[tool.setuptools.packages.find]
include = ["homebase*"]

[tool.setuptools.package-data]
homebase = ["static/*", "markets/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
